fixed color discrepancy around OILS in oils.jpg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div id="corners">
-			<h1><img src='images/oilsfrontspace.jpg' alt='OILS' title='OILS' /></h1>
+			<h1><img src='images/oils.jpg' alt='OILS' title='OILS' /></h1>
 		</div>
 		<ul id="rotator">
 			<li class="show"><img src="images/02.jpg" alt="pic2" /></li>
