Added Soundcloud link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<ul id="list">
 				<li><a href="http://www.youtube.com/oilstheband">videos</a></li>
 				<li><a href="http://www.facebook.com/oilstheband">facebook</a></li>
+				<li><a href="http://www.soundcloud.com/oils">soundcloud</a></li>
 				<li><a href="http://pyramidlakerecords.bandcamp.com/">self-titled cassette</a></li>
 				<li><a href="http://whatevertapes.bandcamp.com/album/platform-diving-lessons-w4e-004">platform diving</a></li>
 				<li><a href="mailto:beadedhall@gmail.com">beadedhall@gmail.com</a></li>
