Customizing Like button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
     <div id="corners">
-      <h1>OILS</h1>
+      <!--<h1>OILS</h1>-->
       <img src="images/DUCK.jpg" alt="DUCK" title="New single 'Duck' coming soon!" />
       <h2>Upcoming Shows</h2>
       <ul id="shows">
@@ -33,6 +33,6 @@
         <li><a href="mailto:beadedhall@gmail.com">beadedhall@gmail.com</a></li>
       </ul>
 		</div> 
-    <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-width="450" data-show-faces="true" data-colorscheme="dark"></div>
+    <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-width="45" data-layout="button_count" data-show-faces="false" data-colorscheme="dark"></div>
 	</body>
 </html>
