--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         <li><a href="mailto:beadedhall@gmail.com">beadedhall@gmail.com</a></li>
       </ul>
 		</div> 
-    <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-width="450" data-layout="button_count" data-show-faces="false" data-colorscheme="dark"></div>
+    <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
 	</body>
 </html>
