--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li><a href="http://oilsoilsoils.bandcamp.com/">bandcamp</a></li>
         <li><a href="mailto:beadedhall@gmail.com">beadedhall@gmail.com</a></li>
       </ul>
-		</div> 
-    <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
+    </div> 
+    <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
 	</body>
 </html>
