--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </script>
     <div id="corners">
       <!--<h1>OILS</h1>-->
-      <img src="images/DUCK.jpg" alt="DUCK" title="New single 'Duck' coming soon!" />
+      <img src="images/duck.jpg" alt="DUCK" title="New single 'Duck' coming soon!" />
       <h2>Upcoming Shows</h2>
       <ul id="shows">
         <li>March 26th with Swimming @ The Replay Lounge. Lawrence, KS.</li>
