New single announcement, top of the pops

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </script>
     <div id="corners">
       <!--<h1>OILS</h1>-->
+      <h3>New single "Duck" to be released digitally this Saturday, March 9th!</h3>
       <img src="img/duck.jpg" alt="DUCK" title="New single 'Duck' coming soon!" />
       <h2>Upcoming Shows</h2>
       <ul id="shows">
