--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <iframe id="duck" width="400" height="100" style="position: relative; display: block; width: 400px; height: 100px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=1530581870/size=venti/bgcol=121212/linkcol=ff33cc/" allowtransparency="true" frameborder="0"><a href="http://oilsoilsoils.bandcamp.com/track/duck">Duck by OILS</a></iframe>
       <h2>Upcoming Shows</h2>
       <ul id="shows">
-        <li>March 26th with Swimming @ The Replay Lounge. Lawrence, KS.</li>
-        <li>April 6th Middle of the Map Festival, details TBA</li>
-        <li>April 11th with Bo and the Locomotive @ The Replay Lounge. Lawrence, KS.</li>
+        <li>March 26th with Swimming @ The Replay Lounge. Lawrence, KS</li>
+        <li>April 6th at The Record Bar for Middle of the Map Festival</li>
+        <li>April 11th with Bo and the Locomotive @ The Replay Lounge. Lawrence, KS</li>
         <li>April 29th with Rooms Without Windows @ The Jackpot. Lawrence, KS</li>
       </ul>
     </div>
