Updated MotM info, again

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2>Upcoming Shows</h2>
       <ul id="shows">
         <li>March 26th with Swimming @ The Replay Lounge. Lawrence, KS</li>
-        <li>April 6th at The Record Bar for Middle of the Map Festival</li>
+        <li>April 6th, 2:30pm @ The Record Bar for Middle of the Map Festival</li>
         <li>April 11th with Bo and the Locomotive @ The Replay Lounge. Lawrence, KS</li>
         <li>April 29th with Rooms Without Windows @ The Jackpot. Lawrence, KS</li>
       </ul>
