--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       <iframe id="duck" width="400" height="100" style="position: relative; display: block; width: 400px; height: 100px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=1530581870/size=venti/bgcol=121212/linkcol=ff33cc/" allowtransparency="true" frameborder="0"><a href="http://oilsoilsoils.bandcamp.com/track/duck">Duck by OILS</a></iframe>
       <h2>Upcoming Shows</h2>
       <ul id="shows">
-        <li>March 26th with Swimming @ The Replay Lounge. Lawrence, KS</li>
-        <li>April 6th, 2:30pm @ The Record Bar for <a href="http://www.middleofthemapfest.com/band/oils/">Middle of the Map Fest</a></li>
-        <li>April 11th with Bo and the Locomotive @ The Replay Lounge. Lawrence, KS</li>
+        <li>April 19th with Plains @ Frank's North Star Tavern, Lawrence, KS</li>
         <li>April 29th with Rooms Without Windows @ The Jackpot. Lawrence, KS</li>
       </ul>
     </div>
