--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
       <iframe id="duck" width="400" height="100" style="position: relative; display: block; width: 400px; height: 100px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=1530581870/size=venti/bgcol=121212/linkcol=ff33cc/" allowtransparency="true" frameborder="0"><a href="http://oilsoilsoils.bandcamp.com/track/duck">Duck by OILS</a></iframe>
       <h2>Upcoming Shows</h2>
       <ul id="shows">
-        <li>April 19th with Plains @ Frank's North Star Tavern, Lawrence, KS</li>
+        <li><a href="https://www.facebook.com/events/446912928726364/">April 24th with Little Spoon and Mutual Benefit @ SeedCO Studios in Lawrence, KS</a></li>
         <li>April 29th with Rooms Without Windows @ The Jackpot. Lawrence, KS</li>
+        <li><a href="https://www.facebook.com/events/360145627425187/">May 17th with Ghosty and Shy Boys @ The Bottleneck in Lawrence, KS</a></li>
       </ul>
     </div>
     <div id="contact">
 			<ul id="list">
 				<li><a href="http://www.youtube.com/oilstheband" target="_blank">videos</a></li>
         <li><a href="http://oilsoilsoils.bandcamp.com/">bandcamp</a></li>
+        <li><a href="https://www.facebook.com/oilstheband">facebook</a></li>
         <li><a href="mailto:beadedhall@gmail.com">beadedhall@gmail.com</a></li>
       </ul>
     </div> 
