Adding more show dates

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       <h2>Upcoming Shows</h2>
       <ul id="shows">
         <li><a href="https://www.facebook.com/events/446912928726364/">April 24th with Little Spoon and Mutual Benefit @ SeedCO Studios in Lawrence, KS</a></li>
+        <li>April 25th with Little Spoon and Mutual Benefit @ <a href="http://www.foklcenter.com/">FOKL</a> in Kansas City, KS</li>
         <li>April 29th with Rooms Without Windows @ The Jackpot. Lawrence, KS</li>
         <li><a href="https://www.facebook.com/events/360145627425187/">May 17th with Ghosty and Shy Boys @ The Bottleneck in Lawrence, KS</a></li>
+        <li>June 7th @ <a href="http://www.crossroadsblockparty.com/">Crossroads Summer Block Party</a> in Kansas City, MO</a></li>
       </ul>
     </div>
     <div id="contact">
