--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>OILS</title>
 		<meta charset='utf-8'>
-    		<link rel="stylesheet" type="text/css" href="opticks.css" />
+    <link rel="stylesheet" type="text/css" href="opticks.css" />
+    <link rel="shortcut icon" href="http://f0.bcbits.com/img/a1116703386_3.jpg">
 	</head>
   <body>
     <div id="fb-root"></div>
@@ -17,7 +18,9 @@
     </script>
     <div id="corners">
       <h1>OILS</h1>
-      <iframe id="duck" width="400" height="100" style="position: relative; display: block; width: 400px; height: 100px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=1530581870/size=venti/bgcol=121212/linkcol=ff33cc/" allowtransparency="true" frameborder="0"><a href="http://oilsoilsoils.bandcamp.com/track/duck">Duck by OILS</a></iframe>
+      <iframe class="bc" width="400" height="100" style="position: relative; display: block; width: 400px; height: 100px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=1530581870/size=venti/bgcol=121212/linkcol=ff33cc/" allowtransparency="true" frameborder="0"><a href="http://oilsoilsoils.bandcamp.com/track/duck">Duck by OILS</a></iframe>
+      <br>
+      <iframe class="bc" width="400" height="100" style="position: relative; display: block; width: 400px; height: 100px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/track=618488627/size=venti/bgcol=121212/linkcol=ff33cc/" allowtransparency="true" frameborder="0"><a href="http://oilsoilsoils.bandcamp.com/track/big-bear">Big Bear by OILS</a></iframe>
       <h2>Upcoming Shows</h2>
       <ul id="shows">
        <li>June 7th @ <a href="http://www.crossroadsblockparty.com/">Crossroads Summer Block Party</a> in Kansas City, MO</a></li>
