Singularity grid design v1.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<title>OILS</title>
-		<meta charset='utf-8'>
-    <link rel="stylesheet" type="text/css" href="opticks.css" />
-    <link rel="shortcut icon" href="http://f0.bcbits.com/img/a1116703386_3.jpg">
-	</head>
-  <body>
+<head>
+  <link href="/style.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="http://f0.bcbits.com/img/a1116703386_3.jpg">
+</head>
+<body>
+  <div class=container>
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
@@ -16,24 +15,22 @@
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
-    <div id="corners">
-      <h1>OILS</h1>
-      <iframe width="560" height="315" src="//www.youtube.com/embed/3MaRvmUpEiI" frameborder="0" allowfullscreen></iframe>
-      <br>
-      <br>
-      <iframe width="560" height="315" src="//www.youtube.com/embed/c_IhMLSDNwk" frameborder="0" allowfullscreen></iframe>
-      <br>
-      <br>
-      <iframe style="border: 0; width: 350px; height: 626px;" src="http://bandcamp.com/EmbeddedPlayer/album=632535395/size=large/bgcol=333333/linkcol=0687f5/transparent=true/"><a href="http://oilsoilsoils.bandcamp.com/album/total-oils-usa">TOTAL OILS USA by OILS</a></iframe>
-   </div>
+    <header>
+    <h1>OILS</h1>
     <div id="contact">
-			<ul id="list">
-				<li><a href="http://www.youtube.com/oilstheband" target="_blank">videos</a></li>
+	  <ul id="list">
+		<li><a href="http://www.youtube.com/oilstheband">youtube</a></li>
         <li><a href="https://www.facebook.com/oilstheband">facebook</a></li>
         <li><a href="http://oilsoilsoils.bandcamp.com/">bandcamp</a></li>
-        <li><a href="mailto:beadedhall@gmail.com">beadedhall@gmail.com</a></li>
+        <li><a href="mailto:beadedhall@gmail.com">email</a></li>
       </ul>
     </div> 
     <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
-	</body>
+    </header>
+    <section class=media>
+      <div class=bandcamp><iframe style="border: 0; width: 350px; height: 626px;" src="http://bandcamp.com/EmbeddedPlayer/album=632535395/size=large/bgcol=333333/linkcol=0687f5/transparent=true/"><a href="http://oilsoilsoils.bandcamp.com/album/total-oils-usa">TOTAL OILS USA by OILS</a></iframe></div>
+      <div class=youtube><iframe width="560" height="315" src="//www.youtube.com/embed/3MaRvmUpEiI" frameborder="0" allowfullscreen></iframe></div>
+    </section>
+  </div>
+</body>
 </html>
