Applied style to fb-like button to make consistent with the above list items.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </script>
     <header>
     <h1>OILS</h1>
-    <div id="contact">
-	  <ul id="list">
+    <div>
+	  <ul>
 		<li><a href="http://www.youtube.com/oilstheband">youtube</a></li>
         <li><a href="https://www.facebook.com/oilstheband">facebook</a></li>
         <li><a href="http://oilsoilsoils.bandcamp.com/">bandcamp</a></li>
