--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/style.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="http://f0.bcbits.com/img/a1116703386_3.jpg">
 </head>
