--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 		<li><a href="http://www.youtube.com/oilstheband">youtube</a></li>
         <li><a href="https://www.facebook.com/oilstheband">facebook</a></li>
         <li><a href="http://oilsoilsoils.bandcamp.com/">bandcamp</a></li>
-        <li><a href="mailto:beadedhall@gmail.com">email</a></li>
+        <li><a href="mailto:oilsbooking@gmail.com">oilsbooking@gmail.com</a></li>
       </ul>
     </div> 
     <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
     </header>
     <section class=media>
-      <div class=bandcamp><iframe style="border: 0; width: 350px; height: 626px;" src="http://bandcamp.com/EmbeddedPlayer/album=632535395/size=large/bgcol=333333/linkcol=0687f5/transparent=true/"><a href="http://oilsoilsoils.bandcamp.com/album/total-oils-usa">TOTAL OILS USA by OILS</a></iframe></div>
+      <div class=bandcamp><iframe style="border: 0; max-width: 350px; height: 626px;" src="http://bandcamp.com/EmbeddedPlayer/album=632535395/size=large/bgcol=333333/linkcol=0687f5/transparent=true/"><a href="http://oilsoilsoils.bandcamp.com/album/total-oils-usa">TOTAL OILS USA by OILS</a></iframe></div>
       <div class=youtube><iframe width="560" height="315" src="//www.youtube.com/embed/3MaRvmUpEiI" frameborder="0" allowfullscreen></iframe></div>
     </section>
   </div>
