Oils 7" out now! Removed Total Oils USA embed, and all media queries. Western Wind Youtube embed stays.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Oils, the band</title>
   <link href="/style.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="http://f0.bcbits.com/img/a1116703386_3.jpg">
 </head>
@@ -17,7 +18,12 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
     <header>
-    <h1>OILS</h1>
+    <div class="replay7inch">
+      <a href="http://replayrecordsusa.com">
+        <img src="/img/logo.jpg">
+        <caption>New 7" out now from Replay Records</caption>
+      </a>
+    </div>
     <div>
 	  <ul>
 		<li><a href="http://www.youtube.com/oilstheband">youtube</a></li>
@@ -28,10 +34,7 @@
     </div> 
     <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
     </header>
-    <section class=media>
-      <div class=bandcamp><iframe style="border: 0; max-width: 350px; height: 626px;" src="http://bandcamp.com/EmbeddedPlayer/album=632535395/size=large/bgcol=333333/linkcol=0687f5/transparent=true/"><a href="http://oilsoilsoils.bandcamp.com/album/total-oils-usa">TOTAL OILS USA by OILS</a></iframe></div>
-      <div class=youtube><iframe width="560" height="315" src="//www.youtube.com/embed/3MaRvmUpEiI" frameborder="0" allowfullscreen></iframe></div>
-    </section>
+    <div class=youtube><iframe width="560" height="315" src="//www.youtube.com/embed/3MaRvmUpEiI" frameborder="0" allowfullscreen></iframe></div>
   </div>
 </body>
 </html>
