Oils is dead. Long live Oils.

--- a/index.html
+++ b/index.html
@@ -8,33 +8,20 @@
 </head>
 <body>
   <div class=container>
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=153183418161352";
-        fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
     <header>
     <div class="replay7inch">
       <a href="http://replayrecordsusa.com">
         <img src="/img/logo.jpg">
-        <caption>New 7" out now from Replay Records</caption>
+        <caption>Waves We Feel / Super Moon Music 7" out now on Replay Records</caption>
       </a>
     </div>
     <div>
 	  <ul>
 		<li><a href="http://www.youtube.com/oilstheband">youtube</a></li>
-        <li><a href="https://www.facebook.com/oilstheband">facebook</a></li>
         <li><a href="http://oilsoilsoils.bandcamp.com/">bandcamp</a></li>
-        <li><a href="mailto:oilsbooking@gmail.com">oilsbooking@gmail.com</a></li>
       </ul>
-    </div> 
-    <div class="fb-like" data-href="https://www.facebook.com/oilstheband" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-colorscheme="dark"></div>
+    </div>
     </header>
-    <div class=youtube><iframe width="560" height="315" src="//www.youtube.com/embed/3MaRvmUpEiI" frameborder="0" allowfullscreen></iframe></div>
   </div>
 </body>
 </html>
